[gd_scene load_steps=13 format=3 uid="uid://b1jm4xava164a"]

[ext_resource type="Texture2D" uid="uid://blvkw4l1ii1a5" path="res://graphics/projectiles/grenade.png" id="1_1mnvm"]
[ext_resource type="Script" uid="uid://bj41mx24nq8a7" path="res://scenes/projectiles/grenade.gd" id="1_b7x1w"]
[ext_resource type="Texture2D" uid="uid://diqyq7eblnsqc" path="res://graphics/explosions/explosion_3.png" id="3_3382y"]
[ext_resource type="Texture2D" uid="uid://s5xt8iirvst2" path="res://graphics/lights/textures/circle.png" id="3_oqjs3"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_b7x1w"]
friction = 2.0
rough = true
bounce = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_b7x1w"]
radius = 19.0263

[sub_resource type="Animation" id="Animation_oqjs3"]
resource_name = "Explosion"
length = 22.0
step = 0.041
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(2.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.041, 0.082, 0.123, 0.164, 0.205, 0.246, 0.287, 0.328, 0.369, 0.41, 0.451, 0.492, 0.533, 0.574, 0.615, 0.656, 0.697, 0.738, 0.779, 0.82, 0.861, 0.902, 0.943, 0.984, 1.025, 1.066, 1.107, 1.148, 1.189, 1.23, 1.271, 1.312, 1.353, 1.394, 1.435, 1.476, 1.517, 1.558, 1.599, 1.64, 1.681, 1.722, 1.763, 1.804, 1.845, 1.886, 1.927, 1.968, 2.009, 2.05, 2.091, 2.132, 2.173, 2.214, 2.255, 2.296, 2.337, 2.378, 2.419, 2.46, 2.501, 2.542, 2.583, 2.624),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 63]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.6, 2.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../GrenadeImage:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_u7dq4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../GrenadeImage:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2die0"]
_data = {
&"Explosion": SubResource("Animation_oqjs3"),
&"RESET": SubResource("Animation_u7dq4")
}

[sub_resource type="Animation" id="Animation_2die0"]
resource_name = "Light"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TimerLight:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.7, 0.8, 0.8991, 0.95, 1, 1.05, 1.1, 1.12, 1.14, 1.16, 1.18, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1e-05, 1.32835e-05, 1e-05, 1e-05, 1e-05, 1e-05, 1e-05, 4.6256e-05, 1e-05, 1e-05, 1e-05, 2.65672e-05),
"update": 0,
"values": [0.0, 50.0, 0.0, 50.0, 0.0, 50.0, 0.0, 50.0, 0.0, 50.0, 0.0, 50.0, 0.0, 50.0, 0.0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"explode"
}]
}

[sub_resource type="Animation" id="Animation_etsl5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TimerLight:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lvrhm"]
_data = {
&"Light": SubResource("Animation_2die0"),
&"RESET": SubResource("Animation_etsl5")
}

[node name="Grenade" type="RigidBody2D"]
collision_layer = 8
collision_mask = 15
mass = 0.5
physics_material_override = SubResource("PhysicsMaterial_b7x1w")
gravity_scale = 0.0
inertia = 0.5
can_sleep = false
freeze_mode = 1
linear_damp = 0.6
script = ExtResource("1_b7x1w")
speed = 500

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_b7x1w")

[node name="GrenadeImage" type="Sprite2D" parent="."]
scale = Vector2(0.25, 0.25)
texture = ExtResource("1_1mnvm")

[node name="TimerLight" type="PointLight2D" parent="."]
color = Color(0.990376, 0.581099, 0.487228, 1)
shadow_enabled = true
texture = ExtResource("3_oqjs3")
texture_scale = 3.0

[node name="ExplosionPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Explosion")
libraries = {
&"": SubResource("AnimationLibrary_2die0")
}

[node name="LightPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_lvrhm")
}

[node name="Explosion" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_3382y")
hframes = 8
vframes = 8
